chore:fixed spacing and added images

--- a/flex.css
+++ b/flex.css
@@ -1,6 +1,7 @@
 body  {
   background-color: #27445C;
 }
+
 .logo {
   width: 50px;
   height: 50px;
@@ -21,10 +22,16 @@ body {
   display: grid;
   grid-template-rows: auto auto auto;
 }
+
+
 .coding_languange {
   display: grid;
   grid-template-columns: auto auto auto;
+  gap: 10px;
+  color: white;
+  margin: 50px;
 }
+
 .nav_bar > button {
   color: white;
 }
@@ -32,8 +39,31 @@ body {
 .introduction {
   color: white;
   display: grid;
-  grid-template-columns: auto auto;
-} 
+  grid-template-areas: 
+  "intro pfp"
+  "intro_paragraph pfp"
+  "intro_buttons pfp";
+  grid-template-columns: 2fr 1fr;
+  margin: 50px;
+}
+  
+.intro {
+  grid-area: intro;
+}
+
+.intro_paragraph {
+  grid-area: intro_paragraph;
+}
+
+.pfp {
+  grid-area: pfp;
+}
+
+.intro_buttons {
+  grid-area: intro_buttons;
+  display: grid;
+}
+
 .nav-bar-buttons {
   display: flex;
 }
@@ -43,6 +73,7 @@ body {
   margin: 5px;
 }
 
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -51,4 +82,20 @@ body {
   box-shadow: 0px -10px 10px rgba(0,0,0,0.1);
 }
 
+.card {
+  border-style: solid;
+  padding: 10px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.projects {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto;
+  color: white;
+  gap: 10px;
+  margin: 50px;
+}
 
